server/compilers/goLiteJS/src/test/ml1/invalid/decl30.go
// missing type name
package main

type int 
